--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Segun
-logo: assets/images/PassPhoto.jpg
+logo: Assets/Images/PassPhoto.jpg
 show_downloads: True
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
